test/errors/type/collections/set/add3.yasl
const x = collections.set()

collections.set().add(x, []);
