test/errors/type/collections/set/add3.yasl.err
TypeError: unable to use mutable object of type list as key. (line 3)
